# IntelAvto

./: .gitignore  README.md  version_correction.py
doc/: Исправленные баги.txt  Комплектация.doc  Комплектация.docx  Комплектация2.docx  Отчёт.docx  План.txt
doc/Hardware/1-IT6006C/: signals.txt
doc/IT6500/: info.txt
doc/РД/1- Информация для Шевченко/: Требование  к ПО ОО-2.docx
doc/РД/Signals/: readme.txt
doc/РД/schematic/: 2-Panel-УШЯИ.467851.019 Э3-OO.sch
doc/РД/Распиновка/: 407ZGT6-device.ioc  (+1 more)
doc/Распиновка/: 407ZGT6.ioc  429VIT6.ioc
doc/ТЗ/: PANEL1.sch  SCPI.txt  info.txt  ~$ебование  к ПО макета.docx  Требование  к ПО макета.docx  Требование  к ПО.docx
sources/: CH3-96-2.uvmpw  CH3-96-2.uvmpw.uvgui.IVAN  CMakeLists.txt  IntelAvto.uvmpw  IntelAvto.uvmpw.uvgui.Sasha
sources/Device/: CMakeLists.txt  Device.uvoptx  Device.uvprojx
sources/Loader/: CMakeLists.txt  Loader.sct  Loader.uvoptx  Loader.uvprojx
sources/Loader/src/: main.cpp
sources/Loader/src/Hardware/: FDrive.cpp  FDrive.h
sources/PLoader/: CMakeLists.txt  PLoader.uvguix.Sasha  PLoader.uvoptx  PLoader.uvprojx
sources/Panel/: CMakeLists.txt  Panel.out  Panel.sct  Panel.uvguix.IVAN  Panel.uvguix.Sasha  Panel.uvoptx  Panel.uvprojx
sources/Panel/src/: Log.cpp  Retarget.c  Settings.cpp  Settings.h  defines.h  main.cpp  no-warnings.h
sources/Panel/src/Calculate/: ValueCountPulse.cpp  ValueDuration.cpp  ValueFPGA.cpp  ValueFPGA.h  ValueFrequency.cpp  ValuePeriod.cpp
sources/Panel/src/Connector/: Handlers_p.cpp  Interface_p.cpp  Interface_p.h  Messages_p.cpp  Transceiver_p.cpp  Value_p.cpp
sources/Panel/src/Connector/Device/: Handlers_p.cpp  Handlers_p.h  Interface_p.cpp  Interface_p.h  Messages_p.cpp  Transceiver_p.cpp  Value_p.cpp
sources/Panel/src/Device/: Device.cpp  Device.h  IT6523.cpp  IT6523.h
sources/Panel/src/Display/: Colors.cpp  Colors.h  Console.cpp  Display.cpp  Display.h  Display_stm.cpp  Indicator.cpp  Indicator.h  Painter.cpp  Painter.h  Primitives.cpp  Primitives.h  RedrawingZone.cpp  RedrawingZone.h  Symbols.cpp  Symbols.h  Text.cpp  Text.h
sources/Panel/src/Display/Font/: Font.h  FontBig.cpp  FontMid.cpp
sources/Panel/src/Display/Pictures/: Picture.cpp  Picture.h  Scheme1.inc  Scheme2.inc  Signal1.cpp  Signal1.inc  Signal2a.inc  Signal2b.inc  Signal3a.inc  Signal3b.inc  Signal4.inc
sources/Panel/src/FlashDrive/: FileManager.cpp  FlashDrive.cpp  FlashDrive.h
sources/Panel/src/Hardware/: Beeper.cpp  Beeper.h  FPGA.cpp  FPGA.h  FreqMeter.cpp  FreqMeter.h  Sound.cpp  Sound.h  Timer.cpp  Timer.h  VCP.cpp  VCP.h
sources/Panel/src/Hardware/CMSIS/: startup_stm32f429xx.s  system_stm32f4xx.c
sources/Panel/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_EEPROM.cpp  HAL_FSMC.cpp  HAL_IT.cpp  HAL_PINS.cpp  HAL_PINS.h  HAL_TIM.cpp  HAL_USBD.cpp  stm32f4xx_hal_conf.h
sources/Panel/src/Hardware/USBD/: usbd_cdc_interface.cpp  usbd_conf.h  usbd_desc.cpp
sources/Panel/src/Keyboard/: Keyboard.cpp  Keyboard.h
sources/Panel/src/LAN/: ClientTCP.cpp  ClientTCP.h  LAN.cpp  LAN.h  LTCP.cpp  LTCP.h  ServerTCP.cpp  ServerTCP.h  app_ethernet.cpp  app_ethernet.h  ethernetif.cpp  ethernetif.h  httpd_cgi_ssi.c  httpd_cgi_ssi.cpp
sources/Panel/src/Menu/: Hint.cpp  Hint.h  Menu.cpp  Menu.h  MenuItems.cpp  MenuItems.h  MenuItemsDef.h  ParameterDrawStruct.cpp  ParameterDrawStruct.h
sources/Panel/src/Menu/Pages/: InputField.cpp  InputField.h  PageCalibration.cpp  PageIndication.cpp  PageIndication.h  PageInfo.cpp  PageLAN.cpp  PageMain.cpp  PageMain.h  PageService.cpp  PageSettings.cpp  PageSignal1.cpp  PageSignal2a.cpp  PageSignal2b.cpp  PageSignal3a.cpp  PageSignal3b.cpp  PageSignal4.cpp  PageSignal5a.cpp  PageSignal5b.cpp  Pages.h
sources/Panel/src/Menu/Pages/Channels/: ChannelA.cpp  ChannelB.cpp  ChannelC.cpp  ChannelD.cpp  Channels.cpp  Channels.h
sources/Panel/src/Menu/Pages/Modes/: Modes.cpp  Modes.h  PageModesA.cpp  PageModesB.cpp  PageModesC.cpp  PageModesD.cpp  PagesModes.cpp
sources/Panel/src/Menu/Pages/Other/: PageColors.cpp  PageInfo.cpp  PageStatistics.cpp  PageTuneColors.cpp
sources/Panel/src/Menu/Pages/Signals/: PageSignals.cpp  PageSignals.h  Signal1.cpp
sources/Panel/src/SCPI/: BufferSCPI.cpp  BufferSCPI.h  Commands.cpp  Commands.h  Parser.cpp  Parser.h  RingBuffer.cpp  RingBuffer.h  SCPI.cpp  SCPI.h  UtilsSCPI.cpp  UtilsSCPI.h
sources/Panel/src/SCPI/Process/: DataSCPI.cpp  DataSender.cpp  DataSender.h  HeadSCPI.cpp  InputSCPI.cpp  MeasureSCPI.cpp  SetSCPI.cpp  UpgradeSCPI.cpp
sources/Panel/src/Settings/: Settings.cpp  Settings.h
sources/Panel/src/Utils/: Buffer.cpp  Buffer.h  Debug.cpp  Debug.h  Math.cpp  Observer.h  Stack.cpp  Stack.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h  Value.cpp  Value.h  ValueSTRICT.cpp  ValueSTRICT.h  Values.cpp  Values.h
sources/Panel/tests/: TestValueSTRICT.cpp  TestValuesFPGA.cpp  Tests.cpp  Tests.h  Utils.cpp
sources/VS/: CMakeLists.txt
sources/VS/Panel/: CMakeLists.txt
sources/VS/Panel/src/: main_win.cpp
sources/VS/Panel/src/Display/: Colors_win.cpp  Display_win.cpp  Primitives_win.cpp
sources/VS/Panel/src/FlashDrive/: FlashDrive_win.cpp
sources/VS/Panel/src/GUI/: Application.cpp  Application.h  ComPort.cpp  ComPort.h  ConsoleSCPI.cpp  ConsoleSCPI.h  GovernorGUI.cpp  GovernorGUI.h
sources/VS/Panel/src/Hardware/: Beeper_win.cpp  VCP_win.cpp
sources/VS/Panel/src/Hardware/HAL/: HAL_EEPROM_win.cpp  HAL_SPI1_win.cpp
sources/VS/Panel/src/Keyboard/: Keyboard_win.cpp
sources/VS/Panel/src/LAN/: ClientTCP_win.cpp  LAN_win.cpp  ServerTCP_win.cpp
sources/VS/Panel/src/VCP/: VCP_win.cpp
sources/VS/Saver/: CMakeLists.txt
sources/VS/Saver/src/: Application_win.cpp  Application_win.h  functions_win.cpp  main_win.cpp
sources/VS/Saver/src/Display/: Colors_win.cpp  Display_win.cpp  Primitives_win.cpp
sources/VS/Saver/src/GUI/: ComPort.cpp  ComPort.h  GovernorGUI.cpp
sources/VS/Saver/src/Keyboard/: Keyboard_win.cpp
sources/VS/Upgrader/: CMakeLists.txt  ComPort.cpp  ComPort.h  main.cpp  rs232.c
sources/VS/checksum/: CMakeLists.txt  main.cpp
sources/common/: Messages.h
sources/scripts/: build.bat
(+553 files in other folders)
